8251458: Parse::do_lookupswitch fails with "assert(_cnt >= 0) failed"

Limit the counter value to max_jint.

Reviewed-by: kvn, vlivanov, chagedorn